bodhi-aws-main/deployment/distribution-template/istio-resources/kubeflow-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  labels:
    app.kubernetes.io/instance: istio-resources
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - <<__subdomain_dashboard__>>.<<__domain__>>
        - <<__subdomain_serving__>>.<<__domain__>>
        - "*.<<__subdomain_serving__>>.<<__domain__>>"
      port:
        name: http
        number: 80
        protocol: HTTP
      # Upgrade HTTP to HTTPS
      tls:
        httpsRedirect: true
    - hosts:
        - <<__subdomain_dashboard__>>.<<__domain__>>
        - <<__subdomain_serving__>>.<<__domain__>>
        - "*.<<__subdomain_serving__>>.<<__domain__>>"
      port:
        name: https
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: kubeflow-ingressgateway-certs
